@@ -1,3 +1,8 @@
+2010-07-23 Magnus Hagdorn
+ * libglimmer-solve/Makefile.am: remove wrong dependency
+ * libglimmer-solve/glimmer_sparse.F90: uncomment restarts
+ * scripts/f90_dependencies.py: fix minor bug
+
 2010-04-03 Ian Rutt
  * libglide/glide_thck.F90: rejigged thickness core to use ADI derived type. 
    This will form a common parameter type for the two schemes eventually.
